# DIP-Assignment

./: README.md  run_global_transform.py  run_point_transform.py
Assigment_02/: READEME  READEME.md  requirements.txt  run_blending_gradio.py
Assigment_02/Pix2Pix/: FCN_network.py  cityscapes_train_list.txt  cityscapes_val_list.txt  download_facades_dataset.sh  pyproject.toml  train.py  train_list.txt  val_list.txt
Assigment_03/: pyproject.toml  report.md  task1_bundle_adjustment.py
Assigment_03/colmap_workspace/dense/: fused.ply
Assigment_03/colmap_workspace/sparse/: sparse.ply
Assignment01/: README.md
